# network_operator

./: CMakeLists.txt  README.md  compare.py  ganop_backup.hpp  plot_results_simple.py  viz_traj.py
app/: RobotSolution.cpp  run_to_goal.cpp  simple_function.cpp  simple_solution.cpp  train.cpp  train_robot_control.cpp
app/include/: RobotFitnessEvaluator.hpp  RobotProblemConfig.hpp  RobotSolution.hpp  simple_config.hpp  simple_fitness_evaluator.hpp  simple_solution.hpp
data/: default_matrix  default_q.txt
lib/: GANOP.cpp  RobotSolution.cpp  baseFunctions.cpp  genetic_algorithm.cpp  model.cpp  nop.cpp  runner.cpp
lib/include/: GAConfig.hpp  GANOP.hpp  GANOPConfig.h  RobotFitnessEvaluator.hpp  RobotProblemConfig.hpp  baseFunctions.hpp  base_config.hpp  base_evaluator.hpp  base_solution.hpp  config.h  controller.hpp  ganop.hpp  genetic_algorithm.hpp  ifitness_evaluator.hpp  isolution.hpp  model.hpp  nop.hpp  runner.hpp
test/: CMakeLists.txt  base_functions_test.cpp  model_test.cpp  nop_extended_test.cpp  runner_test.cpp
